--- a/yaml_files/deployment.yaml
+++ b/yaml_files/deployment.yaml
@@ -36,7 +36,7 @@ spec:
       serviceAccountName: example-webhook
       containers:
       - name: server
-        image: abdulrhmanaly/webhook-ksniff:v3.6
+        image: <builtimage>
         imagePullPolicy: Always
         ports:
         - containerPort: 8443
